WIP - checkpoint commit #2 Basic services working. Reduction in the use gbif api references